--- a/calc.css
+++ b/calc.css
@@ -30,14 +30,11 @@ table {
 th,
 td
 {
+  padding-left: 20px;
   text-align: left;
 }
 [class^=val] {
   text-align: right;
-}
-th, td
-{
-  padding-left: 20px;
 }
 
 tr *:first-child {
@@ -57,6 +54,17 @@ tr *:first-child {
   border-top: solid 1px #000;
 }
 
+tr.outgoing td {
+  cursor: pointer;
+}
+tr.subtotal {
+  display: none;
+  overflow: hidden;
+}
+tr.subtotal td {
+  color: #aaa;
+}
+
 tr.return td {
   border-top: solid 1px blue;
   border-bottom: solid 1px blue;
@@ -71,6 +79,8 @@ h3 span {
   font-weight: normal;
   font-size: 90%;
 }
+
+
 
 
 #settings {
