--- a/calc.css
+++ b/calc.css
@@ -33,8 +33,12 @@ td
   padding-left: 20px;
   text-align: left;
 }
+
 [class^=val] {
   text-align: right;
+}
+[title] {
+  /*cursor: help;*/
 }
 
 tr *:first-child {
